# KML-RNASEQ

./: README.md  RNA-seq.xmind  main.py  pyproject.toml
.template/config/: sample.tsv
config/: conda_env.yaml  config.yaml  database.yaml  resource.yaml
kml_rnaseq/: __init__.py  config.py  fastq.py  snakemake.py
migration/: conda_env-SH.yaml
templates/: 250115.input.tsv  250115.metadata.tsv  input.tsv  snakemake.yaml
tests/: 250115.input.tsv  250115.metadata.tsv  run.sh  snakemake.yaml  test_config.py  test_fastq.py  test_snakemake.py
utils/: deseq2_deg_kegg.R
wf-rnaseq/: Snakefile
wf-rnaseq/rules/: RPKM_TPM.smk  common.smk  enrich.smk  fastp.smk  fastqc.smk  feature_counts.smk  gene_diff.smk  gene_diff_deseq2.smk  gene_diff_edger.smk  gene_quant.smk  gene_quantitation.smk  hisat2_align.smk  qualimap.smk  qualimap_counts.smk  qualimap_rnaseq.smk  rseqc_saturation.smk
wf-rnaseq/schemas/: config.schema.yaml
wf-rnaseq/scripts/: calc_rpkm_tpm.py  deseq2_deg_go.R  deseq2_deg_kegg.R  deseq2_get_deg.R  deseq2_pheatmap.R  fastp_all_samples_qc.py  filter_gene_count.py  filter_tpm_table.py  gene_count.py  gene_diff_deseq2.R  gene_diff_edger.R  gene_quant_boxplot.py  gene_quant_pca.R  gene_quant_violinplot.py  gene_quantitaion_boxplot.py  intersample_correlation.py  qualimap_counts_input.py
wf-rnaseq/scripts/deprecated/: qualimap_counts_input.py
wf-rnaseq/wrappers/bio/fastqc/test/: Snakefile
workflow/: Snakefile
workflow/rules/: common.smk  copy_fq.smk  fastp.smk  fastqc.smk  hisats.smk
workflow/schemas/: config.schema.yaml  samples.schema.yaml
(+1 files in other folders)
